--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /tmp/backend
 
 # We want to populate the module cache based on the go.{mod,sum} files.
 COPY go.mod .
-# COPY go.sum .
+COPY go.sum .
 
 RUN go mod download
 
